# devcontainer-pyspark-example

./: .gitignore  .pylintrc  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
conf/: core-site.xml
notebooks/: bigquery_test.ipynb  gcs_test.ipynb
scripts/: hellow.py
scripts/utils/: helper.py
