[tool.poetry]
name = "devcontainer-pyspark-example"
version = "0.1.0"
description = ""
authors = ["brandon-setegn <bjsetegn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
pylint = "^2.13.9"
pyspark = "^3.2.1"
google-cloud-bigquery = "^3.2.0"
db-dtypes = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
